--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,11 @@
 		Adding this dependency to your project will also add a log4j2.xml file to the classpath 
 		which will cause any log4j2 loggers to get redirected back into good ol' log4j1. 
 	</description>
-	<url>http://code.randomnoun.com/log4j-one-bridge/index.html</url>
+	<url>https://github.com/randomnoun/log4j-one-bridge</url>
 	<inceptionYear>2020</inceptionYear>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<org.springframework.version>5.3.1</org.springframework.version><!--  was 4.3.20.RELEASE -->
 	</properties>
 
 	<dependencies>
@@ -64,12 +63,12 @@
 		<url>http://gitlab.dev.randomnoun/randomnoun/log4j-one</url>
     </scm>
 	<issueManagement>
-		<system>jira</system>
-		<url>http://jira.dev.randomnoun/LOGJ4ONEBRIDGE</url>
+		<system>brain</system>
+		<url>matrix://user-187257167263.r114.s7.citadel-8573.omnicorp.com.au/randomnoun/log4j-one-bridge</url>
 	</issueManagement>
 	<ciManagement>
 		<system>Bamboo</system>
-		<url>http://bamboo.dev.randomnoun:8085/bamboo/browse/RANDOMNOUN-LOGJ4ONEBRIDGE</url>
+		<url>http://bamboo.dev.randomnoun/browse/RANDOMNOUN-LOG4JONEBRIDGE</url>
 	</ciManagement>
 	<licenses>
 		<license>
@@ -88,7 +87,6 @@
 			<post>log4j-one-bridge@lists.randomnoun.com</post>
 			<archive>http://lists.randomnoun.com/pipermail/log4j-one-bridge/</archive>
 		</mailingList>
-		<!-- TODO: a generic announcements / notifications list -->
 	</mailingLists>
 	<organization>
 		<name>randomnoun</name>
@@ -160,10 +158,6 @@
                             <include>**/*Test.java</include>
                             <include>**/*TestSuite.java</include>
                         </includes>
-                        <excludes>
-                            <!-- exclude the log4j1 tests -->
-                            <exclude>**/log4j/*Test.java</exclude>
-                        </excludes>
                     </configuration>
 
                     <executions>
@@ -178,7 +172,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-site-plugin</artifactId>
-					<version>3.2</version>
+					<version>3.3</version>
 					<dependencies>
 						<dependency>
 							<groupId>lt.velykis.maven.skins</groupId>
@@ -196,14 +190,34 @@
 							<artifactId>doxia-module-html</artifactId>
 							<version>1.1.0</version>
 						</dependency>
+						<!--  
 						<dependency>
-							<!-- add support for ssh/scp -->
-							<groupId>org.apache.maven.wagon</groupId>
-							<artifactId>wagon-ssh</artifactId>
-							<version>1.0</version>
+							<groupId>net.trajano.wagon</groupId>
+				            <artifactId>wagon-git</artifactId>
+				            <version>2.0.3</version>
 						</dependency>
+						 -->
 					</dependencies>
 				</plugin>
+				
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.2.0</version>
+					<!-- 
+					  this configuration is used during the javadoc:jar goal during the release
+					  configuration for the reports is in the <reporting> section  
+					-->
+					<configuration>
+	                	<additionalparam>-Xdoclint:none</additionalparam>
+	                	<failOnError>false</failOnError>
+						<javadocDirectory>${project.basedir}/src/main/javadoc</javadocDirectory>
+						<docfilessubdirs>true</docfilessubdirs>
+						<author>true</author>
+						<linksource>true</linksource>
+					</configuration>
+				</plugin>
+				
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -280,13 +294,28 @@
 
 	<reporting>
 		<plugins>
-		<!-- 
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+		          <webAccessUrl>https://github.com/randomnoun/log4j-one</webAccessUrl>
+		          <anonymousConnection>scm:git:ssh://git@github.com:randomnoun/log4j-one.git</anonymousConnection>
+		          <developerConnection>scm:git:ssh://git@github.com:randomnoun/log4j-one.git</developerConnection>
+		        </configuration>
+            </plugin>           		
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.2.0</version>
+				<!-- 
+				  this configuration is used during the site:site goal during the release
+				  configuration for the javadoc artifact is in the <pluginManagement> section  
+				-->
 				<configuration>
-					<stylesheetfile>${project.basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+                	<additionalparam>-Xdoclint:none</additionalparam>
+                	<failOnError>false</failOnError>
 					<javadocDirectory>${project.basedir}/src/main/javadoc</javadocDirectory>
 					<docfilessubdirs>true</docfilessubdirs>
 					<author>true</author>
@@ -301,30 +330,20 @@
 					</reportSet>
 				</reportSets>
 			</plugin>
-			 -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<formats>
-						<format>html</format>
-						<format>xml</format>
-					</formats>
-				</configuration>
-			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.16</version>
+				<version>2.19.1</version>
 				<configuration>
+					<argLine>-Dnashorn.args="--no-deprecation-warning"</argLine>
 				</configuration>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.5</version>
 				<configuration>
 					<linkJavadoc>true</linkJavadoc>
 					<javadocDir>target/site/apidocs</javadocDir>
@@ -347,12 +366,6 @@
 	        <url>http://nexus2.dev.randomnoun/nexus/content/repositories/snapshots/</url>
 	        <uniqueVersion>false</uniqueVersion>
 	    </snapshotRepository>
-		<site>
-			<id>site</id>
-			<name>log4j-one-bridge Website</name>
-			<!-- this will be externally visible at http://code.randomnoun.com/log4j-one-bridge -->
-			<url>scp://code.randomnoun.com/var/www/code.randomnoun.com/log4j-one-bridge/</url>
-		</site>
 	</distributionManagement>
 
 </project>
